# fastmcp-server-first

./: .dockerignore  DEPLOYMENT.md  Dockerfile  README.md  TROUBLESHOOTING.md  deployment-info.sh  pyproject.toml  requirements.txt  server.py  setup-tunnel.ps1
.devcontainer/: devcontainer.json
infra/: container-app.resources.bicep  container.resources.bicep  container.resources.json  deploy-container.sh  infrastructure.resources.bicep  setup-infra.sh
tests/: test_server.py
