[project]
name = "fastmcp-server-first"
version = "0.1.0"
description = "A FastMCP server with HTTP support"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.2.0",
    "starlette",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []
